--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,9 @@
 html{
     background: #F9F9F9
 }
+body > div.container > div > div > div > div > div > div:hover {
+background: none;
+}
 
 body{
     background: #F9F9F9;
