--- a/views/testimonials/new.ejs
+++ b/views/testimonials/new.ejs
@@ -8,7 +8,7 @@
           <input type="text" name="name" placeholder="First and Last Name"required>
         </div>
         <div class="field">
-          <label>Relationship</label>
+          <label>How do you know Dr. Finlay?</label>
           <select name="relationship" placeholder="e.g. Student, Piano Parent, Colleague" required>
           <option disabled selected value> -- select an option -- </option>
           <option value="Student">Student</option>
@@ -19,9 +19,15 @@
           </select>
         </div>
         <div class="field">
-          <label>Name</label>
+          <label>Testimonial</label>
           <textarea type="text" name="text" placeholder="Write your testimonial here!" required></textarea>
-     </div>
+        </div>
+
+        <!-- <div class="field">
+          <label for="email">Enter your email so you can edit or delete your testimonial.
+            <input type="email" name="email" placeholder="Enter your email" required>
+          </label>
+        </div> -->
     
             
               
