improve approach page

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -1,24 +1,19 @@
 <% include ./partials/header.ejs %>
-<div id="tech-content" class="ui top attached segment">
-
+<div id="tech-content" class="ui top attached divided segment">
     <div class="container">
-        <div class="ui stackable grid">
-
+        <div class="ui stackable  grid">
             <div class="one column row banner-container">
                 <div class="column mobile hidden">
                     <img class="banner  "
-                        src="https://static.wixstatic.com/media/0209e9_8482bb2ab5f24594adff66263d8bdc51.jpg/v1/fill/w_686,h_140,al_c,lg_1,q_80/0209e9_8482bb2ab5f24594adff66263d8bdc51.webp"
+                        src="images/banner.png"
                         alt="">
                     <h1 id="banner-headline" class="ui huge center aligned header ">Teaching Approach</h1>
                 </div>
             </div>
-
             <div class="one column row">
                 <div class="column" id="approach-content">
                     <h2 class="p-heading">Overview</h2>
-
-
-                    <p>My first goal as a teacher is for all of my students to love their lessons. Students who love
+                    <p>My goal is for all of my students to love their lessons. Students who love
                         their lessons
                         practice happily without being dragged to the piano and they make fast progress. Unfortunately,
                         music lessons
@@ -26,9 +21,8 @@
                         homework!" Many
                         parents, in turn, have bad memories of their own childhood lessons.
                     </p>
-
                     <p>
-                        I do my utmost to make sure my students have a better experience. My students progress quickly
+                        I do my best to make sure my students have a better experience. My students progress quickly
                         through their
                         method books and beyond because they enjoy it from the very beginning. Although I do employ a
                         traditional
@@ -44,20 +38,53 @@
                         a way that is
                         engaging and fun!
                     </p>
-                    ​
-                    <h2 class="p-heading">
-                        Curriculum
-                    </h2>
+                </div>
+            </div>
+            <div class="ui divider"></div>
+            <div class="one column row">
+                <div class="column">                            
+                    <h2 class="ui header p-heading">Video Gallery</h2>
+                </div>
+            </div>
+
+            <div class="two column row" id="videos">
+
+                    <div class="column">
+
+                        
+                        <div class="video-container">
+                            <iframe width="400" height="250" src="https://www.youtube.com/embed/21h69j_VtBA" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="video-container">
+                            <iframe width="400" height="250" src="https://www.youtube.com/embed/FFIR3tNVv-o" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe> </div>
+                    </div>
+                </div>
+                <div class="ui divider"></div>
+                <div class="one column row">
+                    <div class="column">
+                            <h2 class="p-heading">
+                                    Curriculum
+                            </h2>
+                    </div>
+                </div>
+            <div class="two column row">
+                <div class="column">                    
+
                     <h4><strong>
-                            Perfect 10 (Main program for students aged 6-18)
+                        Perfect 10 (Main program for students aged 6-18)
                         </strong></h4>
-                    <p>
+                        <p>
                         This course is modeled after the Music Teachers National Association's Achievement In Music
                         (AIM) program, and
                         offers a thorough, well-rounded curriculum designed to develop fundamental musical skills,
                         including:
                     </p>
-                    ​
                     <ul>
 
                         <li>Confidence in Performance</li>
@@ -79,56 +106,60 @@
                         variety of local competitions, festivals, and theory examinations in order to bolster the skills
                         gleaned in
                         lessons.
-                    </p>
+                    </p></div>
 
-
-                    <h4>
-                        <strong>
-                            Focus on Performance (For very advanced pianists).
-                        </strong>
-                    </h4>
-
-                    <p>This more intensive course is aimed at students who have demonstrated a serious commitment to
-                        piano performance
-                        and would like to work towards ambitious goals, including participating in national and
-                        international music
-                        festivals and competitions and applying for admission to music degree programs at major
-                        conservatories and
-                        Universities. Admission into this course is subject to Dr. Finlay's approval, and the curriculum
-                        varies
-                        depending on the goals of the individual student.
-                    </p>
-                    ​
-                    <h4><strong>
-
-                            Never Too Late (For adult students).
-                    </h4></strong>
-                    <p>Have you always wanted to play an instrument? Did you take lessons when you were younger and
-                        regret giving it up?
-                        If so I would love to help you! Around 30 percent of my students over the years have been
-                        adults, and I can
-                        honestly say that it is absolutely never too late to begin, and you'd be surprised how much you
-                        can accomplish!
-                    </p>
-                </div>
-            </div>
-            <div class="two column row" id="videos">
-                <div class="column">
-                    <div class="video-container">
-                        <iframe width="400" height="250" src="https://www.youtube.com/embed/21h69j_VtBA" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="video-container">
-                        <iframe width="400" height="250" src="https://www.youtube.com/embed/FFIR3tNVv-o" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe> </div>
-                </div>
+            <div class="column">
+                <img class="ui large bordered image" src="https://images.unsplash.com/photo-1475275166152-f1e8005f9854?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
             </div>
         </div>
+        <div class="ui divider"></div>
+            <div class="two column row">
+                <div class="column">
+                        <h4>
+                            <strong>
+                                    Focus on Performance (For advanced pianists).
+                            </strong>
+                        </h4>        
+                            <p>This more intensive course is aimed at students who have demonstrated a serious commitment to
+                                piano performance
+                                and would like to work towards ambitious goals, including participating in national and
+                                international music
+                                festivals and competitions and applying for admission to music degree programs at major
+                                conservatories and
+                                Universities. Admission into this course is subject to Dr. Finlay's approval, and the curriculum
+                                varies
+                                depending on the goals of the individual student.
+                            </p>
+                    </div>
+                    <div class="column">
+                        <img src="https://pianotex.com/wp-content/uploads/2013/08/Concert-Grand-Piano-on-Stage.jpg" alt="" class="ui large bordered image">
+                    </div>
+                </div>
+                <div class="ui divider"></div>
+                    <div class="two column row">
+                        <div class="column">
+                                <h4><strong>Never Too Late (For adult students).
+                                    </h4></strong>
+                                    <p>Have you always wanted to play an instrument? Did you take lessons when you were younger and
+                                        regret giving it up?
+                                        If so I would love to help you! Around 30 percent of my students over the years have been
+                                        adults, and I can
+                                        honestly say that it is absolutely never too late to begin, and you'd be surprised how much you
+                                        can accomplish!
+                                    </p>
+                                </div>
 
+                        <div class="column">
+                                <img src="https://www.nextavenue.org/wp-content/uploads/2017/07/Tips-from-a-Teaching-Artist-First-Piano-Lesson_1.jpg" alt="" class="ui large img">
+
+                        </div>
+                    </div>
+                    
+
+
+        </div>
+    </div>
+</div> 
     </div>
 </div>
 <% include ./partials/footer.ejs %>
