improve approach mobile view

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -1,7 +1,7 @@
 <% include ./partials/header.ejs %>
 <div id="tech-content" class="ui top attached divided segment">
     <div class="container">
-        <div class="ui stackable  grid">
+        <div class="ui stackable grid">
             <div class="one column row banner-container">
                 <div class="column mobile hidden">
                     <img class="banner  "
@@ -74,85 +74,95 @@
                     </div>
                 </div>
             <div class="two column row">
-                <div class="column">                    
+                <div class="ui mobile reversed stackable equal width grid">
+                        <div class="column">                    
 
-                    <h4><strong>
-                        Perfect 10 (Main program for students aged 6-18)
-                        </strong></h4>
-                        <p>
-                        This course is modeled after the Music Teachers National Association's Achievement In Music
-                        (AIM) program, and
-                        offers a thorough, well-rounded curriculum designed to develop fundamental musical skills,
-                        including:
-                    </p>
-                    <ul>
-
-                        <li>Confidence in Performance</li>
-
-                        <li> Rhythm</li>
-
-                        <li>Sight-reading</li>
-
-                        <li>Technical Facility</li>
-
-                        <li>Aural Skills</li>
-
-                        <li>Music History</li>
-                    </ul>
-
-
-                    <p>There are 10 levels to this comprehensive curriculum. Enrolled students are encouraged to
-                        participate in a
-                        variety of local competitions, festivals, and theory examinations in order to bolster the skills
-                        gleaned in
-                        lessons.
-                    </p></div>
-
-            <div class="column">
-                <img class="ui large bordered image" src="https://images.unsplash.com/photo-1475275166152-f1e8005f9854?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
-            </div>
+                                <h4><strong>
+                                    Perfect 10 (Main program for students aged 6-18)
+                                    </strong></h4>
+                                    <p>
+                                    This course is modeled after the Music Teachers National Association's Achievement In Music
+                                    (AIM) program, and
+                                    offers a thorough, well-rounded curriculum designed to develop fundamental musical skills,
+                                    including:
+                                </p>
+                                <ul>
+            
+                                    <li>Confidence in Performance</li>
+            
+                                    <li> Rhythm</li>
+            
+                                    <li>Sight-reading</li>
+            
+                                    <li>Technical Facility</li>
+            
+                                    <li>Aural Skills</li>
+            
+                                    <li>Music History</li>
+                                </ul>
+            
+            
+                                <p>There are 10 levels to this comprehensive curriculum. Enrolled students are encouraged to
+                                    participate in a
+                                    variety of local competitions, festivals, and theory examinations in order to bolster the skills
+                                    gleaned in
+                                    lessons.
+                                </p></div>
+            
+                        <div class="column">
+                            <img class="ui large bordered image" src="https://images.unsplash.com/photo-1475275166152-f1e8005f9854?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
+                        </div>
+                </div>
+                
         </div>
         <div class="ui divider"></div>
             <div class="two column row">
-                <div class="column">
-                        <h4>
-                            <strong>
-                                    Focus on Performance (For advanced pianists).
-                            </strong>
-                        </h4>        
-                            <p>This more intensive course is aimed at students who have demonstrated a serious commitment to
-                                piano performance
-                                and would like to work towards ambitious goals, including participating in national and
-                                international music
-                                festivals and competitions and applying for admission to music degree programs at major
-                                conservatories and
-                                Universities. Admission into this course is subject to Dr. Finlay's approval, and the curriculum
-                                varies
-                                depending on the goals of the individual student.
-                            </p>
-                    </div>
-                    <div class="column">
-                        <img src="https://pianotex.com/wp-content/uploads/2013/08/Concert-Grand-Piano-on-Stage.jpg" alt="" class="ui large bordered image">
-                    </div>
+                <div class="ui mobile reversed equal width stackable grid">
+                        <div class="column">
+                                <h4>
+                                    <strong>
+                                            Focus on Performance (For advanced pianists).
+                                    </strong>
+                                </h4>        
+                                    <p>This more intensive course is aimed at students who have demonstrated a serious commitment to
+                                        piano performance
+                                        and would like to work towards ambitious goals, including participating in national and
+                                        international music
+                                        festivals and competitions and applying for admission to music degree programs at major
+                                        conservatories and
+                                        Universities. Admission into this course is subject to Dr. Finlay's approval, and the curriculum
+                                        varies
+                                        depending on the goals of the individual student.
+                                    </p>
+                            </div>
+                            <div class="column">
+                                <img src="https://pianotex.com/wp-content/uploads/2013/08/Concert-Grand-Piano-on-Stage.jpg" alt="" class="ui large bordered image">
+                            </div>
+                </div>
+
+               
                 </div>
                 <div class="ui divider"></div>
                     <div class="two column row">
-                        <div class="column">
-                                <h4><strong>Never Too Late (For adult students).
-                                    </h4></strong>
-                                    <p>Have you always wanted to play an instrument? Did you take lessons when you were younger and
-                                        regret giving it up?
-                                        If so I would love to help you! Around 30 percent of my students over the years have been
-                                        adults, and I can
-                                        honestly say that it is absolutely never too late to begin, and you'd be surprised how much you
-                                        can accomplish!
-                                    </p>
+                        <div class="ui mobile reversed equal width stackable grid">
+                                <div class="column">
+                                        <h4><strong>Never Too Late (For adult students).
+                                            </h4></strong>
+                                            <p>Have you always wanted to play an instrument? Did you take lessons when you were younger and
+                                                regret giving it up?
+                                                If so I would love to help you! Around 30 percent of my students over the years have been
+                                                adults, and I can
+                                                honestly say that it is absolutely never too late to begin, and you'd be surprised how much you
+                                                can accomplish!
+                                            </p>
+                                        </div>
+        
+                                <div class="column">
+                                        <img src="https://www.nextavenue.org/wp-content/uploads/2017/07/Tips-from-a-Teaching-Artist-First-Piano-Lesson_1.jpg" alt="" class="ui large image">
+        
                                 </div>
-
-                        <div class="column">
-                                <img src="https://www.nextavenue.org/wp-content/uploads/2017/07/Tips-from-a-Teaching-Artist-First-Piano-Lesson_1.jpg" alt="" class="ui large img">
-
                         </div>
+
                     </div>
                     
 
