--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/stylesheets/hamburger.css" type="text/css" media="all">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/navbar.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/mobileview.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src ="/scripts/vcitaconfig.js"></script>
     <script src="/stylesheets/hamburger.js"></script>
