--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -8,7 +8,6 @@ body > div.container > div > div > div > div > div > div:hover {
     }
 #schedule-button, #mobile-signin{
         border: 2px black hidden !important;
-        width:100%;
         margin: 20px 0;
         max-width: 490px;
         font-size: 1rem;
@@ -44,4 +43,8 @@ justify-self: flex-end !important
     background: #20769A !important;
     color: white !important;
 }
-  
+@media (max-width: 500px){
+    #schedule-button{
+        width: 100%;
+    }
+}
