change schedule button media query

--- a/public/stylesheets/mobileview.css
+++ b/public/stylesheets/mobileview.css
@@ -16,3 +16,8 @@
     background-color: #404040
  }
 
+ @media (max-width: 767px){
+   #schedule-button #mobile-signin{
+       width: 100%;
+   }
+}
