--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -143,8 +143,7 @@
                
                 </div>
                 <div class="ui divider"></div>
-                    <div class="two column row">
-                        <div class="ui mobile reversed equal width stackable grid">
+h                        <div class="ui mobile reversed equal width stackable grid">
                                 <div class="column">
                                         <h4><strong>Never Too Late (For adult students).
                                             </h4></strong>
@@ -152,7 +151,7 @@
                                                 regret giving it up?
                                                 If so I would love to help you! Around 30 percent of my students over the years have been
                                                 adults, and I can
-                                                honestly say that it is absolutely never too late to begin, and you'd be surprised how much you
+                                                say that it is never too late to begin, and you'd be surprised how much you
                                                 can accomplish!
                                             </p>
                                         </div>
