--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -151,7 +151,7 @@ h                        <div class="ui mobile reversed equal width stackable gr
                                                 regret giving it up?
                                                 If so I would love to help you! Around 30 percent of my students over the years have been
                                                 adults, and I can
-                                                say that it is never too late to begin, and you'd be surprised how much you
+                                                say that it is absolutely never too late to begin, and you'd be surprised how much you
                                                 can accomplish!
                                             </p>
                                         </div>
