delete stray h on approach page, attempt new pic

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -143,7 +143,7 @@
                
                 </div>
                 <div class="ui divider"></div>
-h                        <div class="ui mobile reversed equal width stackable grid">
+                        <div class="ui mobile reversed equal width stackable grid">
                                 <div class="column">
                                         <h4><strong>Never Too Late (For adult students).
                                             </h4></strong>
@@ -157,7 +157,7 @@ h                        <div class="ui mobile reversed equal width stackable gr
                                         </div>
         
                                 <div class="column">
-                                        <img src="https://www.nextavenue.org/wp-content/uploads/2017/07/Tips-from-a-Teaching-Artist-First-Piano-Lesson_1.jpg" alt="" class="ui large image">
+                                        <img src="https://images.unsplash.com/photo-1551759861-683c693471e2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1025&q=80" alt="" class="ui large image">
         
                                 </div>
                         </div>
