--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -157,7 +157,7 @@
                                         </div>
         
                                 <div class="column">
-                                        <img src="https://images.unsplash.com/photo-1551759861-683c693471e2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1025&q=80" alt="" class="ui large image">
+                                        <img src="https://images.unsplash.com/photo-1565115692932-0375d284d87e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="" class="ui large image">
         
                                 </div>
                         </div>
