change performance class pic, approach

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -136,7 +136,7 @@
                                     </p>
                             </div>
                             <div class="column">
-                                <img src="https://pianotex.com/wp-content/uploads/2013/08/Concert-Grand-Piano-on-Stage.jpg" alt="" class="ui large bordered image">
+                                <img src="images/barbican.jpg" alt="" class="ui large bordered image">
                             </div>
                 </div>
 
