--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -110,7 +110,7 @@
                                 </p></div>
             
                         <div class="column">
-                            <img class="ui large bordered image" src="https://images.unsplash.com/photo-1475275166152-f1e8005f9854?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80" alt="">
+                            <img class="ui large bordered image" src="images/girl.png" alt="">
                         </div>
                 </div>
                 
