change images on index and approach views again

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -110,7 +110,7 @@
                                 </p></div>
             
                         <div class="column">
-                            <img class="ui large bordered image" src="images/girl.png" alt="">
+                            <img class="ui large bordered image" src="images/perfect10.png" alt="">
                         </div>
                 </div>
                 
