--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         <div class="three column row">
             <div class="column">
                 <div class="ui centered spaced large image" id="banner-image">
-                    <img src="https://images.unsplash.com/photo-1514119412350-e174d90d280e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1650&q=80"
+                    <img src="images/girl.png"
                         alt="">
                     <a href="/approach"class="ui huge black button">
                         <i class="info circle icon"></i>Approach
