correct typo on technology page

--- a/views/technology.ejs
+++ b/views/technology.ejs
@@ -34,7 +34,7 @@
                         <p>
                             Learning to read music fluently gives students the independence to learn music on their own and
                             to progress at a much faster rate, but who likes filling in notespellers and drilling
-                            flashcards? As it happens, there are powerful tools such as this one accomplish exactly the same
+                            flashcards? As it happens, there are powerful tools such as this one that accomplish exactly the same
                             thing more effectively while giving immediate feedback (applause) for every correct answer!
                         </p>
                     </div>
