--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -29,7 +29,7 @@ body > div.container > div > div > div > div > div > div:hover {
     
         background: rgba(0 ,0,0, 0.2) !important;
         color: black!important;
-        border: 2px black solid !important;
+        /*border: 2px black solid !important; */
      
     }
     #schedule-div{
