edit text in approach page to test

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -124,7 +124,7 @@
                                             Focus on Performance (For advanced pianists).
                                     </strong>
                                 </h4>        
-                                    <p>This more intensive course is aimed at students who have demonstrated a serious commitment to
+                                    <p>This intensive course is aimed at students who have demonstrated a serious commitment to
                                         piano performance
                                         and would like to work towards ambitious goals, including participating in national and
                                         international music
