change wording for Focus on Performance description

--- a/views/approach.ejs
+++ b/views/approach.ejs
@@ -126,7 +126,7 @@
                                 </h4>        
                                     <p>This intensive course is aimed at students who have demonstrated a serious commitment to
                                         piano performance
-                                        and would like to work towards ambitious goals, including participating in national and
+                                        and would like to work towards more ambitious goals, including participating in national and
                                         international music
                                         festivals and competitions and applying for admission to music degree programs at major
                                         conservatories and
